--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,4 @@
-- name: Deploy to Cloud Run
+- name: Build and Push Docker image
   run: |
-    gcloud run deploy glysthealth-service \
-      --image=gcr.io/$PROJECT_ID/glysthealth-wordpress \
-      --region=us-central1 \
-      --platform=managed \
-      --allow-unauthenticated
+    docker build -t gcr.io/$PROJECT_ID/glysthealth-wordpress .
+    docker push gcr.io/$PROJECT_ID/glysthealth-wordpress
