--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,7 @@
-- name: Build and Push Docker image
+- name: Deploy to Cloud Run
   run: |
-    docker build -t gcr.io/$PROJECT_ID/glysthealth-wordpress .
-    docker push gcr.io/$PROJECT_ID/glysthealth-wordpress
+    gcloud run deploy glysthealth-service \
+      --image=gcr.io/$PROJECT_ID/glysthealth-wordpress \
+      --region=us-central1 \
+      --platform=managed \
+      --allow-unauthenticated
